--- a/index.html
+++ b/index.html
@@ -206,10 +206,11 @@
         </div>
     </div>
 
-    <!-- JavaScript Files - Using Type Module -->
-    <script type="module">
-        // Import and initialize the app
-        import './js/app.js';
-    </script>
+    <!-- JavaScript Files -->
+    <script src="js/config.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/components.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
