--- a/index.html
+++ b/index.html
@@ -121,16 +121,11 @@
                         </div>
 
                         <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-2">Meeting Duration:</label>
-                            <select id="durationSelect" onchange="updateDuration()" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none text-sm">
-                                <option value="30">30 minutes</option>
-                                <option value="60" selected>1 hour</option>
-                                <option value="90">1.5 hours</option>
-                                <option value="120">2 hours</option>
-                                <option value="180">3 hours</option>
-                                <option value="240">4 hours</option>
-                                <option value="480">8 hours (full day)</option>
-                            </select>
+                            <label class="block text-sm font-medium text-gray-700 mb-2">Meeting Duration (minutes):</label>
+                            <input type="number" id="durationSelect" min="15" max="1440" step="15" value="60" 
+                                onchange="updateDuration()" onkeypress="if(event.key==='Enter') updateDuration()"
+                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none text-sm"
+                                placeholder="Enter duration in minutes">
                         </div>
                     </div>
 
