--- a/index.html
+++ b/index.html
@@ -123,14 +123,7 @@
                 <div class="bg-gray-50 rounded-xl p-6">
                     <h3 class="text-lg font-semibold text-gray-900 mb-4">Participants</h3>
                     
-                    <div class="grid md:grid-cols-3 gap-6">
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-2">Select Participant:</label>
-                            <select id="participantSelect" onchange="selectParticipant()" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none text-sm">
-                                <option value="">Choose participant...</option>
-                            </select>
-                        </div>
-                        
+                    <div class="grid md:grid-cols-2 gap-6">
                         <div id="joinForm">
                             <label class="block text-sm font-medium text-gray-700 mb-2">Join Meetup:</label>
                             <div class="flex gap-2">
@@ -160,11 +153,16 @@
                     </div>
 
                     <div class="mt-4">
-                        <h4 class="text-sm font-medium text-gray-700 mb-2">All Participants:</h4>
-                        <div id="participantsList" class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-2">
+                        <h4 class="text-sm font-medium text-gray-700 mb-3">All Participants (click to select):</h4>
+                        <div id="participantsList" class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-2">
                             <p class="text-gray-500 text-center text-sm col-span-full">No participants yet</p>
                         </div>
                     </div>
+
+                    <!-- Hidden select for backwards compatibility -->
+                    <select id="participantSelect" class="hidden">
+                        <option value="">Choose participant...</option>
+                    </select>
                 </div>
 
                 <!-- Scheduling Section -->
