--- a/index.html
+++ b/index.html
@@ -145,13 +145,6 @@
                         </div>
                     </div>
 
-                    <div id="currentSelection" class="mt-4 hidden">
-                        <div class="bg-blue-50 border border-blue-200 rounded-lg p-3">
-                            <div class="text-sm font-medium text-blue-800">Currently managing:</div>
-                            <div id="selectedParticipantName" class="text-blue-900 font-semibold text-sm"></div>
-                        </div>
-                    </div>
-
                     <div class="mt-4">
                         <h4 class="text-sm font-medium text-gray-700 mb-3">All Participants (click to select):</h4>
                         <div id="participantsList" class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-2">
@@ -159,7 +152,8 @@
                         </div>
                     </div>
 
-                    <!-- Hidden select for backwards compatibility -->
+                    <!-- Hidden elements for backwards compatibility -->
+                    <div id="currentSelection" class="hidden"></div>
                     <select id="participantSelect" class="hidden">
                         <option value="">Choose participant...</option>
                     </select>
