--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     </div>
                 </div>
 
-                <!-- NEW: Availability Calendar Section -->
+                <!-- Availability Calendar Section -->
                 <div class="bg-gray-50 rounded-xl p-6">
                     <h3 class="text-lg font-semibold text-gray-900 mb-4">Availability Calendar</h3>
                     
@@ -258,12 +258,15 @@
                             Sending as: <span id="messageParticipantName" class="font-semibold"></span>
                         </div>
                         <div class="flex flex-col sm:flex-row gap-3">
-                            <input type="text" id="messageInput" placeholder="Type a message..." 
+                            <input type="text" id="messageInput" placeholder="Type a message (use : for emotes)..." 
                                    class="flex-1 px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none text-sm"
                                    onkeypress="if(event.key==='Enter') sendMessage()">
                             <button onclick="sendMessage()" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg transition-colors duration-200 text-sm whitespace-nowrap">
                                 Send Message
                             </button>
+                        </div>
+                        <div class="mt-2 text-xs text-gray-500">
+                            💡 Type <code>:</code> to search emotes (e.g., :peepo, :KEKW, :Sadge)
                         </div>
                     </div>
                     
@@ -341,7 +344,8 @@
     <script src="js/utils.js"></script>
     <script src="js/api.js"></script>
     <script src="js/components.js"></script>
-    <script src="js/calendar.js"></script>  <!-- NEW: Calendar component -->
+    <script src="js/emotes.js"></script>  <!-- NEW: Emote system -->
+    <script src="js/calendar.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
