--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/themes.css">
     <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/emotes.css">
 </head>
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
     <div id="app" class="flex items-center justify-center min-h-screen p-4">
@@ -343,5 +344,6 @@
     <script src="js/components.js"></script>
     <script src="js/calendar.js"></script>  <!-- NEW: Calendar component -->
     <script src="js/app.js"></script>
+    <script src="js/emotes.js"></script> <!-- NEW: Emotes system -->
 </body>
 </html>
