--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <script src="js/api.js"></script>
     <script src="js/components.js"></script>
     <script src="js/calendar.js"></script>  <!-- NEW: Calendar component -->
-    <script src="js/emotes.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/emotes.js"></script> <!-- NEW: Emotes system -->
 </body>
 </html>
