--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
     <script src="js/components.js"></script>
     <script src="js/calendar.js"></script>
     <script src="js/theme-switcher.js"></script>
+    <script src="js/modal-system.js"></script> <!-- NEW: Custom Modal System -->
     <script src="js/app.js"></script>
     <script src="js/emotes.js"></script>
 </body>
