Add browser compatibility detection and documentation
Introduces feature detection via js/utils/feature-detection.js and integrates it into the app. Adds browser-test.html for interactive compatibility testing. Updates docs/README.md and adds docs/browser-compatibility.md with detailed browser support information. Exposes debugBrowserSupport globally and updates package.json with related scripts.

--- a/index.html
+++ b/index.html
@@ -374,6 +374,9 @@
     <!-- Global exports -->
     <script src="js/utils/globals.js"></script>
     
+    <!-- Feature detection -->
+    <script src="js/utils/feature-detection.js"></script>
+    
     <!-- Main app -->
     <script src="js/core/app.js"></script>
     <script src="js/emotes.js"></script>
